log
Fri Mar 18 14:38:28 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bb4dc87
Fri Mar 18 14:40:32 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7d23a75
Fri Mar 18 14:41:51 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
318b6d4
Fri Mar 18 14:45:06 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:45:34: error: ‘list->current’ is a pointer; did you mean to use ‘->’?
     list->current = list->current.next;
                                  ^
                                  ->
Compilation failed
493c1e9
Fri Mar 18 14:45:15 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b4b126d
Fri Mar 18 14:46:40 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
336e7fc
Fri Mar 18 14:47:09 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
15aabfe
Fri Mar 18 14:47:27 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
765bcea
Fri Mar 18 14:49:10 UTC 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
4982df9
Fri Mar 18 14:50:08 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
fc1a3f5
Fri Mar 18 14:50:50 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:43:5: error: ‘return’ with no value, in function returning non-void [-Werror]
     return;
     ^~~~~~
list.c:39:8: note: declared here
 void * firstList(List * list) {
        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ac6a97e
Fri Mar 18 14:50:59 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
915e617
Fri Mar 18 14:51:34 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
d89d9e1
Fri Mar 18 14:53:23 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7e1557d
Fri Mar 18 14:53:45 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1e381db
Fri Mar 18 14:54:11 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
bb88260
Fri Mar 18 14:54:38 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:47:23: error: suggest parentheses around comparison in operand of ‘&’ [-Werror=parentheses]
     if (list->current != NULL & list->current->next != NULL)
                       ^
cc1: all warnings being treated as errors
Compilation failed
5dedc71
Fri Mar 18 14:55:15 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d0527ed
Fri Mar 18 14:55:38 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
a396dda
Fri Mar 18 14:56:24 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
6886373
Fri Mar 18 14:57:21 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6528d13
Fri Mar 18 14:58:18 UTC 2022: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  3|5
total_score: 15/70
d2fe7c6
Fri Mar 18 15:00:27 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
32fd23b
Fri Mar 18 15:02:02 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|5
total_score: 15/70
84fce60
Fri Mar 18 15:03:09 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
3f0145a
Fri Mar 18 15:03:46 UTC 2022: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  5|5
total_score: 15/70
4efda7c
Fri Mar 18 15:05:34 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
d13d64c
Fri Mar 18 15:05:59 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
3e1ceb6
Fri Mar 18 15:06:32 UTC 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|5
total_score: 15/70
a74d5ee
Fri Mar 18 15:07:51 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
3c442d6
Fri Mar 18 15:08:26 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|5
total_score: 15/70
8e248b1
Fri Mar 18 15:08:38 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:47:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
     if (list->current->next != NULL)
     ^~
list.c:49:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
       return list->current->data;
       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4af49d5
Fri Mar 18 15:08:52 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|5
total_score: 15/70
cfe574c
Fri Mar 18 15:10:31 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
d1616c2
Fri Mar 18 15:11:52 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|4
total_score: 25/70
35d9a43
Fri Mar 18 15:13:07 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
9c0bbbd
Fri Mar 18 15:14:32 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
fa713a5
vi., 18 de mar. de 2022 21:01:41: 
 tests:  9|3
total_score: 35/70
6e2b233
vi., 18 de mar. de 2022 21:28:12: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  9|3
total_score: 35/70
80f12a7
vi., 18 de mar. de 2022 21:30:13: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
63fa9a0
vi., 18 de mar. de 2022 21:31:53: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
9c78269
vi., 18 de mar. de 2022 21:37:42: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
fd6fad2
vi., 18 de mar. de 2022 22:18:27: 
 list.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 50/70
123c572
vi., 18 de mar. de 2022 22:25:46: 
 list.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  10|2
total_score: 50/70
ae2a5ef
vi., 18 de mar. de 2022 22:37:16: 
 list.c | 31 ++++++++++++++++++++-----------
 1 file changed, 20 insertions(+), 11 deletions(-)
 tests:  0|0
74d7682
vi., 18 de mar. de 2022 22:41:16: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
17268d4
vi., 18 de mar. de 2022 22:43:22: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  10|2
total_score: 50/70
ecab0e1
vi., 18 de mar. de 2022 22:44:07: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 50/70
8986f09
vi., 18 de mar. de 2022 22:50:01: 
 list.c | 16 +++++++++++-----
 1 file changed, 11 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 50/70
ceaafd7
vi., 18 de mar. de 2022 22:52:13: 
 list.c | 16 ++--------------
 1 file changed, 2 insertions(+), 14 deletions(-)
 tests:  0|0
f409714
vi., 18 de mar. de 2022 23:01:13: 
 list.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:73:19: error: statement with no effect [-Werror=unused-value]
     list->current == n;
     ~~~~~~~~~~~~~~^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0abc028
vi., 18 de mar. de 2022 23:01:56: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  11|1
total_score: 60/70
85aca60
